fixed issue with user profiel picture not showing correctly for flock

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ input[type=password] {
 }
 .left,
 .right{
-  height: 90vh;
+  height: 85vh;
   overflow: hidden;
   overflow-y: scroll; 
   text-align: center;
